Fix Firefox and Safari layout issues for Web

--- a/src/layouts/layouts.css
+++ b/src/layouts/layouts.css
@@ -1,6 +1,6 @@
 .layoutPicker {
     display: flex;
-    margin: 0.5em;
+    margin: 0.25em;
 }
 
 .layoutBtnContainer {
