--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -32,7 +32,7 @@ body {
 .panels {
     flex: 1;
     display: flex;
-    max-height: calc(100% - 5em);
+    max-height: calc(100% - 6em);
 }
 
 .workspace-panel {
