--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -5,7 +5,7 @@
 
     .btn-secondary,
     .language-picker {
-        margin: 0.5em;
+        margin: 0.25em;
     }
 
     .btn-secondary:hover {
